# AdventOfCode2022

./: .clang-format  .clang-tidy  .gitignore  Advent.cpp  Advent.hpp  CMakeLists.txt  Day.hpp  Day01.cpp  Day01.hpp  LICENSE  README.md  Types.hpp  advent.cpp
days/: CMakeLists.txt  Day01.cpp  Day01.hpp  Day02.cpp  Day02.hpp  Day03.cpp  Day03.hpp  Day04.cpp  Day04.hpp  Day05.cpp  Day05.hpp  Day06.cpp  Day06.hpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp
days/include/: letter.hpp  offset_grid.hpp  owning_span.hpp  point2d.hpp
days/include/days/: advent_days.hpp  day.hpp  day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp  day06.hpp  day07.hpp  day08.hpp  day09.hpp  day10.hpp  day11.hpp  day12.hpp  day13.hpp  day14.hpp  day15.hpp  day16.hpp  day17.hpp  day18.hpp  day19.hpp  day20.hpp  day21.hpp  day22.hpp  day23.hpp
include/: Advent.hpp  Day.hpp  FileBackedBuffer.hpp  FixedString.hpp  Formatting.hpp  MetaUtils.hpp  Options.hpp  Parsing.hpp  TabularPrint.hpp  Timing.hpp  Types.hpp  WidthCalculator.hpp
input/: day01.txt  day07.txt  day09.txt  day14.txt  day15.txt  day17.txt  day20.txt  day23.txt  day24.txt  day25.txt
lib/: CMakeLists.txt  file_backed_buffer.cpp  graph.cpp  options.cpp  table.cpp
lib/include/: file_backed_buffer.hpp  fixed_string.hpp  graph.hpp  options.hpp  parsing.hpp  table.hpp  timing.hpp  types.hpp
lib/include/chart/: calculator.hpp  chart.hpp
lib/include/meta/: utils.hpp
lib/include/table/: calculator.hpp  formatting.hpp
other_languages/ocaml/: day01.ml
other_languages/python/: Day01.py  Day17.py  Day21.py
src/: Advent.cpp  CMakeLists.txt  FileBackedBuffer.cpp  Options.cpp  TabularPrint.cpp
